--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,4 @@
 /* src/index.css */
-
 /* --- FONT IMPORTS --- */
 @import url("https://fonts.cdnfonts.com/css/satoshi");
 @import url("https://fonts.googleapis.com/css2?family=Marcellus&display=swap");
@@ -10,7 +9,9 @@
 /* --- YOUR CUSTOM REACT-SPECIFIC STYLES --- */
 @import "./styles/legacy.css";
 
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 
 
